--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.3",
+    "@paypal/react-paypal-js": "^8.1.3",
     "@tanstack/react-query": "^4.29.7",
     "axios": "^1.6.3",
     "jwt-decode": "^3.1.2",
